[package]
name = "nestgate-rpc"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "JSON-RPC + tarpc IPC layer for primal-to-primal communication"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
nestgate-types = { path = "../nestgate-types" }
nestgate-config = { path = "../nestgate-config" }

anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
ureq = { workspace = true }
rustls-rustcrypto = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
bincode = { workspace = true }
etcetera = { workspace = true }
futures-util = { workspace = true }
rustix = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true, features = ["tokio1", "serde-transport", "serde1", "tcp"] }
tokio = { workspace = true }
tokio-serde = { workspace = true, features = ["bincode"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
# uzers removed — replaced by rustix::process::getuid (already in dep tree)

[features]
default = []
# BTSP handshake client (JSON-RPC to BearDog security capability; no crypto in NestGate).
btsp = []
# Orchestrator registration stub and related dev-only RPC helpers (opt-in).
dev-stubs = []

[dev-dependencies]
fastrand = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
