[package]
name = "nestgate-security"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Security, cryptography, and certificate management for NestGate"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
nestgate-types = { path = "../nestgate-types" }
nestgate-config = { path = "../nestgate-config" }
nestgate-discovery = { path = "../nestgate-discovery" }
nestgate-rpc = { path = "../nestgate-rpc" }

# Crypto (RustCrypto stack)
aes-gcm = { workspace = true }
argon2 = { workspace = true, features = ["std"] }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
md5 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

# Core utilities
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
nestgate-platform = { path = "../nestgate-platform" }
temp-env = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
dev-stubs = []
