[package]
name = "nestgate-security"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Security delegation, certificate parsing, and zero-cost providers for NestGate — crypto operations delegated via IPC"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
nestgate-types = { path = "../nestgate-types" }
nestgate-config = { path = "../nestgate-config" }
nestgate-discovery = { path = "../nestgate-discovery" }
nestgate-rpc = { path = "../nestgate-rpc" }

# Encoding utilities (crypto operations delegated to security capability provider via IPC)
base64 = { workspace = true }
hex = { workspace = true }
x509-parser = { workspace = true }
sha2 = { workspace = true }

# Core utilities
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
nestgate-platform = { path = "../nestgate-platform" }
temp-env = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
dev-stubs = []
