[package]
name = "nestgate-types"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Foundational error, result, and unified enum types for NestGate"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
