[package]
name = "nestgate-types"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Foundational error, result, and unified enum types for NestGate"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
