[package]
name = "nestgate-ui"
version = "0.9.2"
edition = "2021"
authors = ["DataScienceBioLab"]
description = "Native Rust user interface for NestGate using egui"
license = "AGPL-3.0-or-later"
repository = "https://github.com/DataScienceBioLab/nestgate"
keywords = ["ui", "nas", "egui", "native"]

[[bin]]
name = "nestgate-ui"
path = "src/main.rs"

[dependencies]
# Internal crates
nestgate-core = { path = "../nestgate-core" }
nestgate-network = { path = "../nestgate-network" }

# Native Rust UI dependencies
egui = "0.24"
eframe = { version = "0.24", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
