[package]
name = "nestgate-zfs"
version = "0.1.0"
edition = "2021"
authors = ["NestGate Development Team <dev@nestgate.io>"]
description = "ZFS storage management for NestGate with intelligent automation"
license = "AGPL-3.0-only"
repository = "https://github.com/nestgate/nestgate"
homepage = "https://nestgate.io"
documentation = "https://docs.rs/nestgate-zfs"
keywords = [ "zfs", "storage", "nas", "automation",]
readme = "README.md"
categories = [ "filesystem", "storage",]

[features]
default = [ "dev-environment-fallbacks",]
zfs = []
orchestrator = []
network-integration = [ "nestgate-automation/network-integration",]
advanced = [ "zfs", "network-integration",]
ai = [ "advanced", "network-integration",]
performance = [ "zfs",]
dev-environment-fallbacks = []
hardware-detection = []
container = []
dev-verbose-logging = []

[dependencies]
futures = "0.3"
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
dashmap = "5.5"
rand = "0.8"
url = "2.4"
bytes = "1.0"
async-trait = "0.1"
regex = "1.10"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
futures = "0.3"
rand = "0.8"
proptest = "1.4"
quickcheck = "1.0"
serial_test = "3.0"
rstest = "0.18"
mockall = "0.12"
axum-test = "14.0"
wiremock = "0.6"
testcontainers = "0.15"
assert_matches = "1.5"
approx = "0.5"
num_cpus = "1.16"

[dependencies.nestgate-core]
path = "../nestgate-core"

[dependencies.nestgate-automation]
path = "../nestgate-automation"

[dependencies.nestgate-mcp]
path = "../nestgate-mcp"

[dependencies.tokio]
version = "1.0"
features = [ "full",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.uuid]
version = "1.0"
features = [ "v4",]

[dependencies.reqwest]
version = "0.11"
features = [ "json", "rustls-tls-native-roots",]
default-features = false

[dev-dependencies.tokio]
version = "1.0"
features = [ "full",]

[dev-dependencies.chrono]
version = "0.4"
features = [ "serde",]

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter",]

[dev-dependencies.criterion]
version = "0.5"
features = [ "html_reports", "async_tokio",]

[dev-dependencies.fake]
version = "2.9"
features = [ "derive", "chrono",]

[dev-dependencies.test-log]
version = "0.2"
features = [ "trace",]
