[package]
name = "nestgate-zfs"
version = "0.1.0"
edition = "2024"
authors = ["ecoPrimals Collective"]
description = "ZFS storage management for NestGate with intelligent automation"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoprimals/nestgate"
homepage = "https://ecoprimals.org"
keywords = ["zfs", "storage", "nas", "automation"]
categories = ["filesystem"]

[lints]
workspace = true

[features]
default = ["dev-environment-fallbacks"]
zfs = []
orchestrator = []
advanced = ["zfs"]
ai = ["advanced"]
performance = ["zfs"]
dev-environment-fallbacks = []
# Dev-only ZFS environment helpers (`dev_environment` module); opt-in for stubbed/local workflows.
dev-stubs = []
hardware-detection = []
container = []
dev-verbose-logging = []
# Declared for `check-cfg` / clippy; bench sources reference these feature gates.
benchmark = []

[dependencies]
nestgate-core = { path = "../nestgate-core" }
nestgate-types = { path = "../nestgate-types" }



serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
temp-env = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
axum-test = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true }
